# HelloGnomie

./: README.md  com.octetful.gnome.json  meson.build
data/: com.octetful.gnome.appdata.xml.in  com.octetful.gnome.desktop.in  com.octetful.gnome.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: hellognomie.gresource.xml  hellognomie.in  main.py  meson.build  window.py  window.ui
